[project]
name = "ls2_overview"
version = "0.1.0"
description = "Simple tools for early visualization of LS2 experiments."
requires-python = ">=3.11"
dependencies = ["click>=8.1", "polars", "opensimplex", "tifffile"]

[project.scripts]
delete_empty_tifs = "ls2_overview.delete_empty_tifs:cli"
create_synthetic_data = "ls2_overview.create_synthetic_ls2_data:cli"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ls2_overview"]
